--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "designer-site",
+  "name": "ginvo-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.0.9",
-    "@next/font": "13.1.2",
+    "@next/font": "^13.3.0",
     "@svgr/webpack": "^6.5.1",
-    "next": "13.1.2",
+    "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
